2019-11-03
- More code cleanup. Move code to dedicated files.

2019-10-28
- Restructure code for output into separate files.
- Cleanup old code.
- Fix bug #189 - valid json output
- Fix issue #190. Add compile time option for JunOS.

2019-09-01
- Cleanup configure.ac

2019-08-31
- Fix various c11 compile issues
- Cleanup old compat15 comments

2019-08-24
- Add vlan tags dot1qVlanId, 243, 254 - #182
- Fix sflow issue with Arista switches

2019-08-19
- Fix ft2nfdump next hop and ip router fields

2019-08-16
- Cleanup and fix IPv6 network display in war records.

2019-08-14
- Fix compile issues
- Fix output buffer size for lzo1x_decompress_safe()

2019-08-07
- Fix VerifyExtensionMap #179

2019-08-06
- Fix compile errors

2019-08-05
- Fix nfdump.1 man page. #175
- Fix off by 1 array. #173
- Fix use after free in ModifyCompressFile
- Add bound checks in AddExporterStat #174
- Add bound checks in AddSamplerInfo #176
- Add bound checks in AddExporterInfo
- Fix checks in InsertExtensionMap #177
- Remove COMPAT15 code - should no longer be needed.
- Move version to v1.6.18
- Merge pull request #167
- Cleanup old code
- Replace depricated pcap_lookupdev call in nfpcapd

2019-07-31
- Add early record size sanity check also for nfprofile, nfanon and nfreplay

2019-07-26
- nfpcapd cleanup, add some more monitoring
- Fix hbo_exporter.c:249_1 segfault 
- Fix hbo_nffile_inline.c:85_1 segfault
- Fix hbo_nfx.c:216_3 segfault
- Update minilzo to v2.10
- Change to safe lzo decompress function

2019-07-25
- Rework nfpcapd and add it officially to the nfdump collection.
- Add nfpcapd man page
- Fix potential unsigned integer underflow #171

2019-07-16
- Add latency extension if dumping flowcache

2019-07-15
- Fix typos
- Fix exporter struct inconsistancies. Coredump on ARM otherwise.

2019-07-02
- Add ipfix element #150, #151 unix time start/end
- Fix display bug raw record

2019-06-01
- Add ipfix dyn element handling.
- Add empty m4 directory - keep autoconf happy

2019-06-01