@@ -1,3 +1,6 @@
+2019-11-09
+- Fix minor nfpcapd issues
+
 2019-11-03
 - More code cleanup. Move code to dedicated files.
 
